fix(ui): contact container alignment - tablet portrait screen

--- a/css/style.css
+++ b/css/style.css
@@ -777,7 +777,7 @@ body {
 	}
 	.contact-container {
 		flex-direction: column;
-		max-width: 95vw;
+		max-width: 70vw;
 	}
 
 	.contact-container .contact-quote {
